    test in SRU whitelist.

  [ Daniel Manrique ]
  * scripts/internet_test: Added a passing threshold parameter for packet
    loss, added auto-adjustment of ping count and deadline so that they don't
    conflict with each other (LP: #1211144)
  * checkbox/parsers/udevadm: Fixed incorrect determination of network and
    wireless device IDs(LP: #1211521)

 -- Daniel Manrique <roadmr@ubuntu.com>  Fri, 09 Aug 2013 12:47:17 -0400

checkbox (0.16.8) raring; urgency=low

  [ Daniel Manrique ]
  * scripts/network_device_info: ignore UTF-8 decoding errors from udevadm
    output, as we do everywhere else (LP: #1210050)

 -- Daniel Manrique <roadmr@ubuntu.com>  Fri, 09 Aug 2013 12:46:29 -0400

checkbox (0.16.7) saucy; urgency=low

  [ Po-Hsu Lin ]
  * jobs/mobilebroadband.txt.in: Make it disconnect from the mobile broadband
    network after job is completed to avoid any unexpected data transmission 
    expense (LP: #1204799)

  [ Jeff Lane ]
  * jobs/suspend.txt.in, jobs/usb.txt.in, jobs/mediacard.txt.in: moved jobs to
    suspend.txt.in for USB and Mediacard after suspend, renamed jobs
    appropriately and adjusted the descriptions.
    data/sru.whitelist: added usb and usb3 after suspend jobs for SRU i
    (LP: #1201420)

  [ Daniel Manrique ]
  * scripts/audio_test: Changed the test frequency to 5040 Hz and increased
    the sampling time to 5 seconds, to improve reliability (LP: #1070776)
  * scripts/pm_test: Added support for invoking through pkexec (LP: #1201769)
  * jobs/audio.txt.in: Added balance jobs (both internal speakers and
    headphones)
  * jobs/stress.txt.in: Added --log-dir to poweroff and reboot stress tests so
    log files get written in the expected location (LP: #1205194)
  * scripts/gpu_test, jobs/graphics.txt.in: Added checks for existence of
    required video files, failing tests if they're not found (LP: #1202946)

  [ Brendan Donegan ]
  * checkbox/parsers/cpuinfo.py - update parser logic to understand cpuinfo